--- a/1/index.html
+++ b/1/index.html
@@ -27,7 +27,6 @@
         .card img {
             max-width: 100%;
             height: auto;
-            border-radius: 10px;
         }
         .card .text {
             margin-top: 15px;
@@ -41,23 +40,57 @@
     <div class="card">
         <img src="1.jpg" alt="Фото 1">
         <div class="text">
-            <p>Это первая фотография с описанием.</p>
+            <p>Подключение к учебному серверу kubsu-dev.ru по SSH с использованием логина U68838, IP-адрес сервера: 192.168.199.8.</p>
         </div>
     </div>
 
     <div class="card">
         <img src="2.jpg" alt="Фото 2">
         <div class="text">
-            <p>Это вторая фотография.</p>
+            <p>Использование команды ping для проверки доступности веб-сервера kubsu.ru.</p>
         </div>
     </div>
 
     <div class="card">
         <img src="3.jpg" alt="Фото 3">
         <div class="text">
-            <p>Это третья фотография.</p>
+            <p>Использование команды nslookup для получения MX-записей домена kubsu.ru.</p>
         </div>
     </div>
 
+    <div class="card">
+        <img src="4.jpg" alt="Фото 3">
+        <div class="text">
+            <p>Использование команды nslookup для получения A-записи домена kubsu.ru.</p>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="5.jpg" alt="Фото 3">
+        <div class="text">
+            <p>Использование команды nslookup для получения MX-записи домена kubsu-dev.ru.</p>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="6.jpg" alt="Фото 3">
+        <div class="text">
+            <p>Использование команды nslookup для получения A-записи домена kubsu-dev.ru.</p>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="7.jpg" alt="Фото 3">
+        <div class="text">
+            <p>Использование команды whois для получения информации о домене kubsu.ru.</p>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="8.jpg" alt="Фото 3">
+        <div class="text">
+            <p>Использование команды whois для получения информации о домене kubsu-dev.ru.</p>
+        </div>
+    </div>
 </body>
 </html>
