--- a/1/index.html
+++ b/1/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #696767;
             margin: 0;
             padding: 20px;
             display: flex;
@@ -16,7 +16,7 @@
             gap: 20px;
         }
         .card {
-            background-color: #fff;
+            background-color: #c9c1c1;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             width: 80%;
