--- a/1/index.html
+++ b/1/index.html
@@ -59,35 +59,77 @@
     </div>
 
     <div class="card">
-        <img src="4.jpg" alt="Фото 3">
+        <img src="4.jpg" alt="Фото 4">
         <div class="text">
             <p>Использование команды nslookup для получения A-записи домена kubsu.ru.</p>
         </div>
     </div>
 
     <div class="card">
-        <img src="5.jpg" alt="Фото 3">
+        <img src="5.jpg" alt="Фото 5">
         <div class="text">
             <p>Использование команды nslookup для получения MX-записи домена kubsu-dev.ru.</p>
         </div>
     </div>
 
     <div class="card">
-        <img src="6.jpg" alt="Фото 3">
+        <img src="6.jpg" alt="Фото 6">
         <div class="text">
             <p>Использование команды nslookup для получения A-записи домена kubsu-dev.ru.</p>
         </div>
     </div>
 
     <div class="card">
-        <img src="7.jpg" alt="Фото 3">
+        <img src="7.jpg" alt="Фото 7">
         <div class="text">
             <p>Использование команды whois для получения информации о домене kubsu.ru.</p>
         </div>
     </div>
 
     <div class="card">
-        <img src="8.jpg" alt="Фото 3">
+        <img src="8.jpg" alt="Фото 8">
+        <div class="text">
+            <p>Использование команды whois для получения информации о домене kubsu-dev.ru.</p>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="9.jpg" alt="Фото 9">
+        <div class="text">
+            <p>Создание ключа с помощью команды ssh-keygen.</p>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="10.jpg" alt="Фото 10">
+        <div class="text">
+            <p>Добавление ключа для доступа к репозиторию.</p>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="11.jpg" alt="Фото 11">
+        <div class="text">
+            <p>Созданный ключ.</p>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="12.jpg" alt="Фото 12">
+        <div class="text">
+            <p>Использование команды whois для получения информации о домене kubsu-dev.ru.</p>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="13.jpg" alt="Фото 13">
+        <div class="text">
+            <p>Использование команды whois для получения информации о домене kubsu-dev.ru.</p>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="14.jpg" alt="Фото 14">
         <div class="text">
             <p>Использование команды whois для получения информации о домене kubsu-dev.ru.</p>
         </div>
