--- a/1/index.html
+++ b/1/index.html
@@ -117,21 +117,21 @@
     <div class="card">
         <img src="12.jpg" alt="Фото 12">
         <div class="text">
-            <p>Использование команды whois для получения информации о домене kubsu-dev.ru.</p>
+            <p>Копируем ключ репозитория.</p>
         </div>
     </div>
 
     <div class="card">
         <img src="13.jpg" alt="Фото 13">
         <div class="text">
-            <p>Использование команды whois для получения информации о домене kubsu-dev.ru.</p>
+            <p>Команда `git clone` используется для копирования репозитория `kuku` с GitHub в локальную директорию на сервере.</p>
         </div>
     </div>
 
     <div class="card">
         <img src="14.jpg" alt="Фото 14">
         <div class="text">
-            <p>Использование команды whois для получения информации о домене kubsu-dev.ru.</p>
+            <p>Содержимое директории www с помощью команды ls.</p>
         </div>
     </div>
 </body>
