--- a/1/index.html
+++ b/1/index.html
@@ -134,5 +134,12 @@
             <p>Содержимое директории www с помощью команды ls.</p>
         </div>
     </div>
+        
+    <div class="card">
+        <img src="15.jpg" alt="Фото 15">
+        <div class="text">
+            <p>Подключение к учебному серверу и копия на локальный компьютер файлы задания из каталога www.</p>
+        </div>
+    </div>
 </body>
 </html>
