--- a/1/index.html
+++ b/1/index.html
@@ -141,5 +141,12 @@
             <p>Подключение к учебному серверу и копия на локальный компьютер файлы задания из каталога www.</p>
         </div>
     </div>
+
+    <div class="card">
+        <img src="16.jpg" alt="Фото 16">
+        <div class="text">
+            <p>Добавление последних фотографий с помощью git pull.</p>
+        </div>
+    </div>
 </body>
 </html>
