--- a/1/index.html
+++ b/1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Фотографии в столбик</title>
+    <title>1к</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -145,7 +145,7 @@
     <div class="card">
         <img src="16.jpg" alt="Фото 16">
         <div class="text">
-            <p>Добавление последних фотографий с помощью git pull.</p>
+            <p>Мы изменяем файл index.html и добавляем скриншоты в github. Далее с помощью git pull перносим изменения на учебный сервер.</p>
         </div>
     </div>
 </body>
