--- a/2/index.html
+++ b/2/index.html
@@ -61,7 +61,7 @@
     <div class="card">
         <img src="4.jpg" alt="Фото 4">
         <div class="text">
-            <p>Выполнение команды git pull для обновления содержимого каталога www/kulku на веб-сервере. Файлы успешно загружены из репозитория GitHub.</p>
+            <p>Выполнение команды git pull для обновления содержимого каталога www/kuku на веб-сервере. Файлы успешно загружены из репозитория GitHub.</p>
         </div>
     </div>
 
