--- a/2/index.html
+++ b/2/index.html
@@ -75,7 +75,7 @@
     <div class="card">
         <img src="6.jpg" alt="Фото 6">
         <div class="text">
-            <p> Медиатип ресурса /image.png — image/png.</p>
+            <p> Медиатип файла — image/png.</p>
         </div>
     </div>
 
